[package]
name = "api_relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0"
warp_form_method = "0.1.0"
futures = "0.3"
reqwest = {version = "0.11", features = ["blocking", "json"]}
pretty_env_logger = "0.4"
log = "0.4"