[package]
name = "api_relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
pretty_env_logger = "0.4"
log = "0.4"
chrono = "0.4.23"
futures-util = "0.3.27"
tokio-stream = "0.1.12"
log4rs = "1.2.0"